[gd_scene load_steps=41 format=3 uid="uid://c58pneqlpaoe6"]

[ext_resource type="Script" path="res://main.gd" id="1_acyn8"]
[ext_resource type="AudioStream" uid="uid://bjf081qg3bspl" path="res://Music/Blackout.mp3" id="2_6a7j8"]
[ext_resource type="Texture2D" uid="uid://du37y427tssdo" path="res://pages/page_00.png" id="2_feesc"]
[ext_resource type="Texture2D" uid="uid://cnwkwswl41jek" path="res://Images/BG.png" id="2_lcaji"]
[ext_resource type="AudioStream" uid="uid://dugclfx772lqp" path="res://Sounds/PageTurn.wav" id="2_x4leh"]
[ext_resource type="Texture2D" uid="uid://dgc3452hte6yl" path="res://pages/page_01.png" id="3_3afry"]
[ext_resource type="Texture2D" uid="uid://csm422ep1dgqw" path="res://pages/page_03.png" id="3_a2l6c"]
[ext_resource type="Texture2D" uid="uid://bt072jfl1vfl4" path="res://Images/Fire/1 (1).png" id="3_wexfg"]
[ext_resource type="Texture2D" uid="uid://bwh1diptkmlpw" path="res://Images/Fire/1 (5).png" id="4_431mv"]
[ext_resource type="Texture2D" uid="uid://4wjsa35dx4vr" path="res://pages/page_02.png" id="4_dvdsx"]
[ext_resource type="Texture2D" uid="uid://64y5235tsrxu" path="res://pages/page_06.png" id="4_ptt1b"]
[ext_resource type="Texture2D" uid="uid://p1jp4lvsyp4u" path="res://Images/Fire/1 (10).png" id="5_yuonj"]
[ext_resource type="Texture2D" uid="uid://qaetlfurqtou" path="res://Images/Fire/1 (15).png" id="6_3hv84"]
[ext_resource type="Texture2D" uid="uid://deyjhggw0b1cx" path="res://pages/page_07.png" id="6_4f438"]
[ext_resource type="Texture2D" uid="uid://bhy5bq4dkpdjw" path="res://pages/page_04.png" id="6_asxwf"]
[ext_resource type="Texture2D" uid="uid://csa5calui2i80" path="res://pages/page_05.png" id="7_2vny2"]
[ext_resource type="Texture2D" uid="uid://c0ins5tp1yorw" path="res://Images/Fire/1 (25).png" id="7_78fep"]
[ext_resource type="Texture2D" uid="uid://c8ymesmxd78yi" path="res://Images/Fire/1 (35).png" id="8_d6hd0"]
[ext_resource type="Texture2D" uid="uid://cfrsuc38k4q1f" path="res://Images/Fire/1 (40).png" id="9_otqiw"]
[ext_resource type="Texture2D" uid="uid://cvdt0umg8k6kf" path="res://Images/Fire/1 (45).png" id="10_sydqd"]
[ext_resource type="Script" path="res://container.gd" id="16_x5441"]
[ext_resource type="Texture2D" uid="uid://e8lwqbq7fb6p" path="res://pages/page_08.png" id="17_70otb"]
[ext_resource type="Texture2D" uid="uid://b27qgvlyx7djf" path="res://Images/flor.png" id="17_bs0r6"]
[ext_resource type="Texture2D" uid="uid://c57btra2lqf05" path="res://Images/grass b.png" id="17_sluac"]
[ext_resource type="Texture2D" uid="uid://bmtls5trwg6lo" path="res://Images/piedra.png" id="18_8h7v6"]
[ext_resource type="Texture2D" uid="uid://t8e62urkmvlc" path="res://Images/castillo.png" id="19_hqwby"]
[ext_resource type="Texture2D" uid="uid://do4sgmy7cc5rd" path="res://Images/coche.png" id="19_tsyck"]
[ext_resource type="AudioStream" uid="uid://cd8rwxdq57u6u" path="res://Sounds/boing2.wav" id="22_mlmtf"]
[ext_resource type="Texture2D" uid="uid://ca07f75jj257k" path="res://Images/restart.png" id="23_5iq50"]
[ext_resource type="AudioStream" uid="uid://cstnx35wa8bau" path="res://Sounds/magic1.wav" id="23_dwb0r"]
[ext_resource type="AudioStream" uid="uid://cpsf01t5rbhyr" path="res://Sounds/minecraft grass1.wav" id="23_ljotg"]
[ext_resource type="AudioStream" uid="uid://cf3fvhndrx51m" path="res://Sounds/woosh.wav" id="24_oi3je"]
[ext_resource type="Texture2D" uid="uid://bdh8qmbxtse53" path="res://Images/win.png" id="24_uqqtr"]
[ext_resource type="Texture2D" uid="uid://dmnnifimxg1w8" path="res://Images/ole.png" id="25_tgsps"]
[ext_resource type="AudioStream" uid="uid://orf5aj72f2co" path="res://Sounds/minecraft grass2.wav" id="26_6ddxd"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ikkfy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_wexfg")
}, {
"duration": 1.0,
"texture": ExtResource("4_431mv")
}, {
"duration": 1.0,
"texture": ExtResource("5_yuonj")
}, {
"duration": 1.0,
"texture": ExtResource("6_3hv84")
}, {
"duration": 1.0,
"texture": ExtResource("7_78fep")
}, {
"duration": 1.0,
"texture": ExtResource("8_d6hd0")
}, {
"duration": 1.0,
"texture": ExtResource("9_otqiw")
}, {
"duration": 1.0,
"texture": ExtResource("10_sydqd")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="Animation" id="Animation_u6yfq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RPage:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RPage:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LPage2:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("LPage2:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("LPage:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("LPage:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("RPage2:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("RPage2:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_2f26g"]
resource_name = "TurnPage_L"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LPage:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.027, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LPage:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("RPage2:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.027, 1), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("RPage2:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.3, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_0gxn4"]
resource_name = "TurnPage_R"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RPage:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333334, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.0272637, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RPage:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LPage2:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.0333333, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("LPage2:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.3, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.027, 1), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j4jk7"]
_data = {
"RESET": SubResource("Animation_u6yfq"),
"TurnPage_L": SubResource("Animation_2f26g"),
"TurnPage_R": SubResource("Animation_0gxn4")
}

[node name="Main" type="Node2D"]
script = ExtResource("1_acyn8")
page_textures = Array[Texture2D]([ExtResource("2_feesc"), ExtResource("3_3afry"), ExtResource("4_dvdsx"), ExtResource("3_a2l6c"), ExtResource("6_asxwf"), ExtResource("7_2vny2"), ExtResource("4_ptt1b"), ExtResource("6_4f438"), ExtResource("17_70otb")])

[node name="Bg" type="Sprite2D" parent="."]
position = Vector2(450, 325)
texture = ExtResource("2_lcaji")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(446, 339)
scale = Vector2(3.75, 5.79167)
sprite_frames = SubResource("SpriteFrames_ikkfy")
autoplay = "default"
frame = 7
frame_progress = 1.0

[node name="TurnPage" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_x4leh")

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_6a7j8")
volume_db = -10.0
autoplay = true
parameters/looping = true

[node name="RPage0" type="Sprite2D" parent="."]
position = Vector2(448.536, 325)
texture = ExtResource("4_ptt1b")
offset = Vector2(210, 0)

[node name="RPage" type="Sprite2D" parent="."]
position = Vector2(448.536, 325)
texture = ExtResource("3_a2l6c")
offset = Vector2(210, 0)

[node name="RPage2" type="Sprite2D" parent="."]
visible = false
position = Vector2(448.536, 325)
texture = ExtResource("3_a2l6c")
offset = Vector2(210, 0)

[node name="LPage0" type="Sprite2D" parent="."]
position = Vector2(450, 325)
texture = ExtResource("6_4f438")
offset = Vector2(-210, 0)

[node name="LPage" type="Sprite2D" parent="."]
position = Vector2(450, 325)
texture = ExtResource("3_a2l6c")
offset = Vector2(-210, 0)

[node name="LPage2" type="Sprite2D" parent="."]
visible = false
position = Vector2(450, 325)
texture = ExtResource("6_4f438")
offset = Vector2(-210, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_j4jk7")
}

[node name="Minigame" type="Node2D" parent="."]
visible = false
position = Vector2(30, 325)

[node name="Container" type="Container" parent="Minigame"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -297.5
offset_right = 420.0
offset_bottom = 297.5
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("16_x5441")
flower_texture = ExtResource("17_bs0r6")
rock_texture = ExtResource("18_8h7v6")
goal_texture = ExtResource("19_hqwby")
start_texture = ExtResource("17_sluac")
empty_texture = ExtResource("17_sluac")
tile_size = 25
car_texture = ExtResource("19_tsyck")
win_sound = ExtResource("22_mlmtf")
click_sound = ExtResource("23_ljotg")
car_move_sound = ExtResource("24_oi3je")
flower_sound = ExtResource("23_dwb0r")
path_step_sound = ExtResource("26_6ddxd")

[node name="BG" type="Sprite2D" parent="Minigame/Container"]
texture = ExtResource("17_70otb")
offset = Vector2(210, 297)

[node name="CenterContainer" type="CenterContainer" parent="Minigame/Container"]
custom_minimum_size = Vector2(420, 595)
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="Minigame/Container/CenterContainer"]
layout_mode = 2

[node name="TextureButton" type="TextureButton" parent="Minigame"]
offset_left = 372.0
offset_top = -34.0
offset_right = 568.0
offset_bottom = 184.0
scale = Vector2(0.199291, 0.199291)
texture_normal = ExtResource("23_5iq50")

[node name="Win" type="Sprite2D" parent="Minigame"]
visible = false
position = Vector2(640, -10)
texture = ExtResource("24_uqqtr")

[node name="Ole" type="Sprite2D" parent="Minigame"]
visible = false
position = Vector2(639, -158)
texture = ExtResource("25_tgsps")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
